--- a/First Markdown File.Rmd
+++ b/First Markdown File.Rmd
@@ -7,6 +7,7 @@ output: github_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
 ## R Markdown
@@ -27,4 +28,8 @@ You can also embed plots, for example:
 plot(pressure)
 ```
 
+```{r mpg, echo=FALSE}
+ ggplot(data = mpg) + 
+     geom_point(mapping = aes(x = displ, y = hwy, size = class, colour = drv))
+```
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
